--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ composeBom = "2024.02.00"
 composeTv = "1.0.0-alpha10" 
 media3 = "1.2.1"
 retrofit = "2.9.0"
+okhttp = "4.12.0"
 glide = "4.16.0"
 dfm = "0.9.25" # DanmakuFlameMaster
 coil = "2.6.0"
@@ -47,6 +48,7 @@ androidx-media3-ui = { group = "androidx.media3", name = "media3-ui", version.re
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 retrofit-converter-protobuf = { group = "com.squareup.retrofit2", name = "converter-protobuf", version.ref = "retrofit" }
+okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 
 # Image Loading
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
